Rename and update sample images, update HTML options
Sample image files in the WaveFunctionCollapse vendor directory were renamed for consistency, and some images were updated. The HTML input image selector was updated to reflect these new names and additions, ensuring correct mapping and selection of available samples.

--- a/playground/wave-function-collapse/wave-function.html
+++ b/playground/wave-function-collapse/wave-function.html
@@ -94,60 +94,64 @@
 					<label
 						>Input Image
 						<select id="exampleSelect">
-							<option value="3Bricks.png" selected>
-								3Bricks
-							</option>
 							<option value="Angular.png">Angular</option>
+							<option value="BrownFox.png">BrownFox</option>
 							<option value="Cat.png">Cat</option>
 							<option value="Cats.png">Cats</option>
 							<option value="Cave.png">Cave</option>
 							<option value="Chess.png">Chess</option>
+							<option value="Circle.png">Circle</option>
 							<option value="City.png">City</option>
-							<option value="ColoredCity.png">ColoredCity</option>
+							<option value="CityColored.png">CityColored</option>
+							<option value="CitySmile.png">CitySmile</option>
+							<option value="Disk.png">Disk</option>
 							<option value="Dungeon.png">Dungeon</option>
 							<option value="Fabric.png">Fabric</option>
 							<option value="Flowers.png">Flowers</option>
+							<option value="FlowersMore.png">FlowersMore</option>
+							<option value="Font.png">Font</option>
 							<option value="Forest.png">Forest</option>
 							<option value="Hogs.png">Hogs</option>
 							<option value="Knot.png">Knot</option>
+							<option value="KnotNot.png">KnotNot</option>
+							<option value="KnotSimple.png">KnotSimple</option>
+							<option value="KnotTrick.png">KnotTrick</option>
 							<option value="Lake.png">Lake</option>
-							<option value="LessRooms.png">LessRooms</option>
 							<option value="Lines.png">Lines</option>
 							<option value="Link.png">Link</option>
 							<option value="Link2.png">Link2</option>
-							<option value="MagicOffice.png">MagicOffice</option>
 							<option value="Maze.png">Maze</option>
+							<option value="MazeRed.png">MazeRed</option>
+							<option value="MazeScaled.png">MazeScaled</option>
+							<option value="MazeSimple.png">MazeSimple</option>
 							<option value="Mazelike.png">Mazelike</option>
-							<option value="MoreFlowers.png">MoreFlowers</option>
 							<option value="Mountains.png">Mountains</option>
 							<option value="Nested.png">Nested</option>
-							<option value="NotKnot.png">NotKnot</option>
 							<option value="Office.png">Office</option>
 							<option value="Office2.png">Office2</option>
+							<option value="OfficeMagic.png">OfficeMagic</option>
 							<option value="Paths.png">Paths</option>
 							<option value="Platformer.png">Platformer</option>
 							<option value="Qud.png">Qud</option>
 							<option value="RedDot.png">RedDot</option>
-							<option value="RedMaze.png">RedMaze</option>
 							<option value="Rooms.png">Rooms</option>
+							<option value="RoomsLess.png">RoomsLess</option>
 							<option value="Rule126.png">Rule126</option>
 							<option value="Sand.png">Sand</option>
-							<option value="ScaledMaze.png">ScaledMaze</option>
 							<option value="Sewers.png">Sewers</option>
-							<option value="SimpleKnot.png">SimpleKnot</option>
-							<option value="SimpleMaze.png">SimpleMaze</option>
-							<option value="SimpleWall.png">SimpleWall</option>
 							<option value="Skew1.png">Skew1</option>
 							<option value="Skew2.png">Skew2</option>
 							<option value="Skyline.png">Skyline</option>
 							<option value="Skyline2.png">Skyline2</option>
-							<option value="SmileCity.png">SmileCity</option>
 							<option value="Spirals.png">Spirals</option>
 							<option value="Town.png">Town</option>
-							<option value="TrickKnot.png">TrickKnot</option>
 							<option value="Village.png">Village</option>
 							<option value="Wall.png">Wall</option>
-							<option value="WalledDot.png">WalledDot</option>
+							<option value="Wall3Bricks.png" selected>
+								Wall3Bricks
+							</option>
+							<option value="WallDot.png">WallDot</option>
+							<option value="WallSimple.png">WallSimple</option>
 							<option value="Water.png">Water</option>
 							<option value="Wrinkles.png">Wrinkles</option>
 						</select>
